Лаб 4/tests/semantic_errors/error3_type_mismatch.listlang
list1 = [1, 2, 3];
number = 5;
result = list1 + number;